# time-aligned-peaks

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE-MIT  Makefile  README.md  pyproject.toml  requirements-tests.txt  setup.cfg  time_aligned_peaks.py
examples/: module_usage_example.py  synthetic_primary.csv  synthetic_primary2.csv  synthetic_secondary.csv  synthetic_secondary2.csv
examples/expected_outputs/: demo_output_peak_matrix_inverse2.csv  demo_output_peaks_inverse1.csv
selftest/: generate_datasets.py  generate_datasets1.py  selftest.bat  tap_selftest.py  time_aligned_peaks_final.py
selftest/examples/: README.txt  README1.txt  primary.csv  primary1.csv  secondary.xlsx  secondary1.xlsx
selftest/tap_selftest_output_final/: session_tap_selections.csv  summary.json
selftest/tap_selftest_output_final1/: session_lineplot_selections.csv  session_tap_selections.csv  summary.json
tests/: test_cli_smoke.py  test_ingestion_alignment.py  test_peak_detection.py  test_peak_matrix.py  test_peaks.py
time_aligned_peaks/: __init__.py  cli.py  io.py  peaks.py  plotting.py  timeline.py
